Modified the travis.yml file and the tox file

--- a/tox.ini
+++ b/tox.ini
@@ -7,10 +7,15 @@ deps=flake8
 commands=flake8 mcmc
 
 [testenv]
+passenv = TRAVIS TRAVIS_JOB_ID TRAVIS_BRANCH
 setenv =
     PYTHONPATH = {toxinidir}:{toxinidir}/mcmc
+deps =
+    coveralls
 
-commands = python setup.py test
+commands = 
+	 coverage run --source=mcmc/mcmc.py setup.py test
+	 coveralls
 
 ; If you want to make tox run the tests with the same versions, create a
 ; requirements.txt with the pinned versions and uncomment the following lines:
