--- a/.travis.yml
+++ b/.travis.yml
@@ -9,14 +9,19 @@ env:
   - TOXENV=py34
   - TOXENV=py33
   - TOXENV=py27
-  - TOXENV=py26
-  - TOXENV=pypy
+
 
 # command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
-install: pip install -U tox
-
+install:
+- pip install -U tox
+- pip install coveralls
 # command to run tests, e.g. python setup.py test
-script: tox -e ${TOXENV}
+script:
+- tox -e ${TOXENV}
+- coverage run --source=langevin_dynamics/langevin_dynamics.py setup.py test
+- coverage report -m
+
+after_success: coveralls
 
 # After you create the Github repo and add it to Travis, run the
 # travis_pypi_setup.py script to finish PyPI deployment setup
